--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-        <div class="contactForm contactFormStyle">
+        <div class="contactForm ">
           <div> 
               <p>Contact from </p>
              <p>Please fill in your information and we`ll be sending your order</p>
